--- a/htdocs/documentation/langs/en_US/documentation.lang
+++ b/htdocs/documentation/langs/en_US/documentation.lang
@@ -41,3 +41,15 @@ DocStripedVariants = Striped
 DocStripedVariantsDesc = Add .progress-bar-striped to any .progress-bar to apply a stripe via CSS gradient over the progress bar’s background color.
 DocOtherVariants = Other
 DocOtherVariantsDesc =
+
+# Set Event Message
+DocSetEventMessageTitle = Set Event Message
+DocSetEventMessageMainDescription = Documentation and examples for set event message
+DocSetEventMessageContextualVariationsDescription = Fill the parameter "style" of function to change color of event message
+DocSetEventMessageContextualVariations = Contextual variations
+DocSetEventMessageDescription = Display one message or several messages
+DocSetEventMessageDisplayMessage = Display message
+DocSetEventMessageDisplayMessages = Display messages
+DocSetEventMessageDisplayOKMessage = Display "OK" message
+DocSetEventMessageDisplayWarningMessage = Display "Warning" message
+DocSetEventMessageDisplayErrorMessage = Display "Error" message
