--- a/htdocs/documentation/langs/en_US/documentation.lang
+++ b/htdocs/documentation/langs/en_US/documentation.lang
@@ -53,3 +53,8 @@ DocSetEventMessageDisplayMessages = Display messages
 DocSetEventMessageDisplayOKMessage = Display "OK" message
 DocSetEventMessageDisplayWarningMessage = Display "Warning" message
 DocSetEventMessageDisplayErrorMessage = Display "Error" message
+DocSetEventMessageOK = OK Message
+DocSetEventMessageWarning = Warning Message
+DocSetEventMessageError = Error Message
+DocSetEventMessageUnique = Unique Message
+DocSetEventMessage = Message #%s
